--- a/sass/pages/_service-details.scss
+++ b/sass/pages/_service-details.scss
@@ -112,7 +112,7 @@
             .title {
                 margin-top: 48px;
             }
-            .text {
+            p {
                 margin-top: 27px;
                 margin-bottom: 0;
             }
